# api-spec-generator

./: Makefile  README.md  llm.py  localLLM.py  orchestrator.py  parser.py  pyproject.toml  remoteLLM.py
config/: cfg.json
services/: serviceGeneration.py
src/: localLLM.py  main.py  models.py  parser.py  remoteLLM.py
src/pipeline/: client_generator.py  doc_generator.py  file_collector.py  openapi_builder.py  orchestrator.py  utils.py
src/services/: serviceGeneration.py
