[project]
name = "api-doc-generator"
version = "0.1.0"
package-mode = false
description = "Генератор технической документации"
authors = [
    {name = "Eternal"}
]
readme = "README.md"
requires-python = ">=3.12,<3.15"
dependencies = [
    "pyyaml (>=6.0.3,<7.0.0)",
    "transformers (>=4.31.0)",
    "torch (==2.9.1)",
    "requests (>=2.32.5,<3.0.0)",
    "python-dotenv (>=1.2.1,<2.0.0)",
    "sentence-transformers (>=5.1.2,<6.0.0)",
    "faiss-cpu (>=1.13.0,<2.0.0)",
    "accelerate (>=1.12.0,<2.0.0)",
    "safetensors (>=0.7.0,<0.8.0)",
    "torchvision (==0.24.1)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
